--- a/PlaywriteOccupationTherapy/Client/PlaywriteOccupationTherapy.Client.csproj
+++ b/PlaywriteOccupationTherapy/Client/PlaywriteOccupationTherapy.Client.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.9" PrivateAssets="all" />
+    <PackageReference Include="Syncfusion.Blazor" Version="19.2.0.59" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
