--- a/PlaywriteOccupationTherapy/Server/PlaywriteOccupationTherapy.Server.csproj
+++ b/PlaywriteOccupationTherapy/Server/PlaywriteOccupationTherapy.Server.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.9" />
+    <PackageReference Include="Syncfusion.Blazor" Version="19.2.0.59" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
