--- a/PlaywriteOccupationTherapy/Server/PlaywriteOccupationTherapy.Server.csproj
+++ b/PlaywriteOccupationTherapy/Server/PlaywriteOccupationTherapy.Server.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.9" />
     <PackageReference Include="Syncfusion.Blazor" Version="19.2.0.59" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
